# ReviaController

./:  requirements.txt  .gitignore  REVIEW.md  main.py  main_window.py  requirements.txt
core/: __init__.py  config.py  conversation.py  decision.py  emotion_engine.py  emotion_nn.py  emotions.py  events.py  llm_registry.py  metacognition.py  module_tracker.py  native_bridge.py  plugin_base.py  plugin_manager.py  self_dev.py  stimulus.py  stt_manager.py  system_monitor.py  timing.py  tts_manager.py
core/av/: __init__.py  av_pipeline.py
core/memory/: __init__.py  continuity.py  embeddings.py  intent.py  memory_store.py  persona.py  rag_engine.py  recall_policy.py  repair.py  vector_store.py
core/safety/: __init__.py  categories.py  filter_engine.py  filter_log.py  scorer.py
core/stt/: __init__.py  stt_engine.py
core/tts/: __init__.py  tts_engine.py
core/vision/: __init__.py  vision_engine.py
native/: CMakeLists.txt
native/src/: revia_native.cpp
plugins/: example_plugin.py  llamacpp_plugin.py  lmstudio_plugin.py  ollama_plugin.py  openai_compat.py  openai_plugin.py
tests/: conftest.py  test_config.py  test_decision.py  test_emotion_nn.py  test_emotions.py  test_memory.py  test_openai_compat.py  test_stimulus.py  test_timing.py
ui/: __init__.py  av_indicators.py  charts.py  style.py  widgets.py
ui/panels/: __init__.py  base_panel.py  center_panel.py  settings_panel.py  sidebar_panel.py
ui/tabs/: __init__.py  base_tab.py  behavior_tab.py  character_tab.py  control_tab.py  eval_tab.py  filters_tab.py  llm_tab.py  logs_tab.py  memory_tab.py  (+5 more)
